--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,7 +23,8 @@ http {
 
     # TLS server
     server {
-        listen              8443 ssl http2;
+        listen              ${HTTPS_PORT} ssl;
+        http2               on;
         server_name         _;
 
         ssl_certificate     /etc/nginx/certs/server.crt;
