--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -251,7 +251,7 @@ services:
       - netbox-postgres-data:/var/lib/postgresql/data
 
   traefik:
-    image: traefik:v3.6.0
+    image: traefik:latest
     command:
       - --api=true
       - --api.insecure=true
