--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -173,6 +173,8 @@ services:
       - netbox-media-files:/opt/netbox/netbox/media:rw
       - netbox-reports-files:/opt/netbox/netbox/reports:rw
       - netbox-scripts-files:/opt/netbox/netbox/scripts:rw
+    extra_hosts:
+      - "host.local:host-gateway"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.netbox.rule=Host(`netbox.localhost`)"
