--- a/docker/assets/plugin_configs/data_source/csaf/sample/isduba.toml
+++ b/docker/assets/plugin_configs/data_source/csaf/sample/isduba.toml
@@ -6,8 +6,8 @@
 plugin_name = "isduba_fetcher"
 
 [DataSource.Plugin]
-url = "http://endpoint.sample.com/"
-keycloak_url = "http://keycloak.sample.com/"
+url = "http://isduba.example.org/"
+keycloak_url = "http://keycloak.example.org/"
 keycloak_realm = "isduba"
 username = "username"
 password = "password"
